--- a/Notebooks/t3_finetuning_seqlabel_er.ipynb
+++ b/Notebooks/t3_finetuning_seqlabel_er.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/limshaocong/ReqBERT/blob/main/t3_finetuning_seqlabel_er.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/limshaocong/ReqBERT/blob/main/Notebooks/t3_finetuning_seqlabel_er.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -98,6 +98,9 @@
     {
       "cell_type": "code",
       "source": [
+        "# This dict allows the correct tokenizer to be imported\n",
+        "# ReqBERT, ReqRoBERTa and ReqSciBERT uses the tokenizers from the\n",
+        "# corresponding base models\n",
         "model_type_dict = {\n",
         "    'bert-base-cased' : 'bert-base-cased',\n",
         "    'roberta-base' : 'roberta-base',\n",
@@ -119,7 +122,6 @@
         "task_name_dict = {\n",
         "    'limsc/fr-nfr-classification' : 'frnfr',\n",
         "    'limsc/subclass-classification' : 'subclass',\n",
-        "    'limsc/concept-recognition-not-iob' : 'cr',\n",
         "    'limsc/requirements-entity-recognition' : 'er'\n",
         "}"
       ],
@@ -132,7 +134,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The dataset for the [entity recognition dataset](https://huggingface.co/datasets/limsc/requirements-entity-recognition) is uploaded onto the HuggingFace hub."
+        "The dataset for the [Task 3 - Entity Recognition](https://huggingface.co/datasets/limsc/requirements-entity-recognition) is uploaded onto the HuggingFace hub."
       ],
       "metadata": {
         "id": "w1xHah3aOT9Y"
@@ -456,6 +458,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "This dataset conforms to the IOB2 labeling scheme."
+      ],
+      "metadata": {
+        "id": "l7DbRb9ENONc"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -491,6 +502,23 @@
         "label_list = ds['train'].features['ner_tags'].feature.names\n",
         "label_list"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Select any of the six LMs and import the corresponding tokenizer.\n",
+        "\n",
+        "* `bert-base-cased`\n",
+        "* `roberta-base`\n",
+        "* `allenai/scibert_scivocab_cased`\n",
+        "* `limsc/reqbert-tapt-epoch29`\n",
+        "* `limsc/reqroberta-tapt-epoch43`\n",
+        "* `limsc/reqscibert-tapt-epoch20`\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "vo_lVcvBOBVL"
+      }
     },
     {
       "cell_type": "code",
@@ -631,6 +659,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Post-tokenization, labels for sub-word tokens needs to be added. See [this notebook](https://colab.research.google.com/github/huggingface/notebooks/blob/main/examples/token_classification-tf.ipynb) for a detailed walk-through."
+      ],
+      "metadata": {
+        "id": "lNOEjF7fOqWh"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -648,7 +685,7 @@
         "    labels = []\n",
         "    \n",
         "    for i, label in enumerate(examples['ner_tags']):\n",
-        "        word_ids = tokenized_inputs.word_ids(batch_index=i)\n",
+        "        word_ids = tokenized_inputs.word_ids(batch_index = i)\n",
         "        previous_word_idx = None\n",
         "        label_ids = []\n",
         "        \n",
@@ -788,6 +825,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Pre-batch datasets in to batches of specified size."
+      ],
+      "metadata": {
+        "id": "vCYgoNxxPr4o"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -847,6 +893,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Train model using standard tf.keras."
+      ],
+      "metadata": {
+        "id": "PczXu1eKQNvq"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import tensorflow as tf\n",
@@ -889,6 +944,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Use KerasMetricCallback to compute metrics at the end of every epoch."
+      ],
+      "metadata": {
+        "id": "av2fpErfQVea"
+      }
     },
     {
       "cell_type": "code",
@@ -951,6 +1015,7 @@
         "\n",
         "update_logger_cb = update_logger()\n",
         "\n",
+        "# Export results\n",
         "csvlogger_file = f'{task_name_dict[ds_name]}-{model_name_dict[model_checkpoint]}.csv'\n",
         "csvlogger_cb = CSVLogger(csvlogger_file, append = True)\n",
         "\n",
@@ -985,6 +1050,15 @@
       ],
       "metadata": {
         "id": "iPOAWvTPQznQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Perform a full grid search of all `batch_sizes` and `initial_lrs`."
+      ],
+      "metadata": {
+        "id": "7tfYQvbbQhZN"
       }
     },
     {
