--- a/Notebooks/t2_finetuning_seqclass_sc.ipynb
+++ b/Notebooks/t2_finetuning_seqclass_sc.ipynb
@@ -7,8 +7,9 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
+      "toc_visible": true,
       "mount_file_id": "https://github.com/limshaocong/SysBERT/blob/main/Sequence_classification_PROMISE.ipynb",
-      "authorship_tag": "ABX9TyO4I6BrcpaF6OdoapU6righ",
+      "authorship_tag": "ABX9TyO0oBwqCkz1Sn9bPspQF/9j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8595,6 +8596,21 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The following libraries are required for this notebook. If run locally, it can be commented out.\n",
+        "\n",
+        "\n",
+        "* `transformers` - an excellent library by Hugging Face that provides a high-level abstraction for fine-tuning of transformer-based models, and a model hub of pre-trained models\n",
+        "* `datasets` - a dataset library by Hugging Face. All datasets used for this thesis are uploaded to this dataset hub. \n",
+        "* `torch` - PyTorch. When running the `allenai/scibert_scivocab_cased` pre-trained model with this notebook on GCP Vertex AI, `torch` needs to be installed.\n",
+        "* `seqeval` - a library for evaluation of sequence labelling tasks"
+      ],
+      "metadata": {
+        "id": "P6GmKTMKRanY"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -8604,6 +8620,15 @@
       "source": [
         "! pip install --user datasets transformers torch"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "While Google Colab provides free GPU access, the specific GPU (K80/ T4/ P100) available is a function of the subscription level (Free Tier/ Colab Pro/ Colab Pro+) and usage trends. Alternatively, Google Cloud Platform provides US$300 in free credits that can be used for paid GPU access."
+      ],
+      "metadata": {
+        "id": "gyUBYYSkRfKn"
+      }
     },
     {
       "cell_type": "code",
@@ -8638,15 +8663,27 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "These dictionaries will minimize the amount of adjustment within the remainder of the script."
+      ],
+      "metadata": {
+        "id": "JeaqVV-ERlcr"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# This dict allows the correct tokenizer to be imported\n",
+        "# ReqBERT, ReqRoBERTa and ReqSciBERT uses the tokenizers from the\n",
+        "# corresponding base models\n",
         "model_type_dict = {\n",
         "    'bert-base-cased' : 'bert-base-cased',\n",
         "    'roberta-base' : 'roberta-base',\n",
         "    'allenai/scibert_scivocab_cased' : 'allenai/scibert_scivocab_cased',\n",
         "    'limsc/reqbert-tapt-epoch29' : 'bert-base-cased',\n",
         "    'limsc/reqroberta-tapt-epoch43' : 'roberta-base',\n",
-        "    'limsc/reqscibert-tapt-epoch20' : 'allenai/scibert_scivocab_cased'\n",
+        "    'limsc/reqscibert-tapt-epoch20' : 'allenai/scibert_scivocab_cased',\n",
         "}\n",
         "\n",
         "model_name_dict = {\n",
@@ -8661,7 +8698,6 @@
         "task_name_dict = {\n",
         "    'limsc/fr-nfr-classification' : 'frnfr',\n",
         "    'limsc/subclass-classification' : 'subclass',\n",
-        "    'limsc/concept-recognition' : 'cr',\n",
         "    'limsc/requirements-entity-recognition' : 'er'\n",
         "}"
       ],
@@ -8670,6 +8706,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The dataset for the [Task 2 - Subclass Classification](https://huggingface.co/datasets/limsc/subclass-classification) is uploaded onto the HuggingFace hub."
+      ],
+      "metadata": {
+        "id": "79lSOYyxRpOl"
+      }
     },
     {
       "cell_type": "code",
@@ -8750,6 +8795,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The dataset contains 5 different labels:\n",
+        "* `F` - Functional requirement\n",
+        "* `O` - Operations requirement\n",
+        "* `PE` - Performance requirement\n",
+        "* `SE` - Security requirement\n",
+        "* `US` - Usability requirement"
+      ],
+      "metadata": {
+        "id": "M-6PFfYRR29W"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "ds['train'].features['class'].names"
@@ -8789,7 +8848,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "To transform natural language requirements into a BERT-compatible format, the text must first be tokenized. This is performed using a pre-trained tokenizer."
+        "Select any of the six LMs and import the corresponding tokenizer.\n",
+        "\n",
+        "* `bert-base-cased`\n",
+        "* `roberta-base`\n",
+        "* `allenai/scibert_scivocab_cased`\n",
+        "* `limsc/reqbert-tapt-epoch29`\n",
+        "* `limsc/reqroberta-tapt-epoch43`\n",
+        "* `limsc/reqscibert-tapt-epoch20`"
       ],
       "metadata": {
         "id": "zn7Ap9euKCSU"
@@ -8949,6 +9015,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Model Fine-tuning (Single Loop)"
+      ],
+      "metadata": {
+        "id": "RrKSsoCDKzxg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Pre-batch datasets in to batches of specified size."
+      ],
+      "metadata": {
+        "id": "fz4Cgmu8T_MN"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from transformers import DataCollatorWithPadding\n",
@@ -9003,10 +9087,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Model Fine-tuning (Single Loop)"
+        "For tf2.6 onwards, the weights of the classification head is only affected by seeds set using tf.random_set_seed. See discussion on [stackoverflow](https://stackoverflow.com/questions/32419510/how-to-get-reproducible-results-in-keras)."
       ],
       "metadata": {
-        "id": "RrKSsoCDKzxg"
+        "id": "l5Y3ylVDUEKd"
       }
     },
     {
@@ -9015,12 +9099,9 @@
         "import tensorflow as tf\n",
         "from transformers import TFAutoModelForSequenceClassification, create_optimizer\n",
         "\n",
-        "# For Tensorflow 2.6, the weights of the classification head is only affected\n",
-        "# by seeds set using tf.random_set_seed.\n",
-        "# https://stackoverflow.com/questions/32419510/how-to-get-reproducible-results-in-keras\n",
-        "\n",
         "seed = 67897\n",
         "tf.random.set_seed(seed)\n",
+        "\n",
         "num_epochs = 2\n",
         "initial_lr = 2e-5\n",
         "\n",
@@ -9130,6 +9211,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "This chunk of code allows you to control which of the encoder layers have been frozen."
+      ],
+      "metadata": {
+        "id": "0cTrFy5JUjs_"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from transformers import models\n",
@@ -9145,12 +9235,11 @@
         "    'allenai/scibert_scivocab_cased' : models.bert.modeling_tf_bert.TFBertMainLayer\n",
         "}\n",
         "\n",
+        "# Adjust this to freeze the later layer\n",
         "frozen_layers = []\n",
         "\n",
         "for layer in model.layers[:]:\n",
         "  \n",
-        "  # Replace transformers.models.bert.modeling_tf_bert.TFBertMainLayer\n",
-        "  # with the corresponding MainLayer name from the previous code output\n",
         "  if isinstance(layer, encoder_layer_name[model_type_dict[model_checkpoint]]):\n",
         "    \n",
         "    for idx, layer in enumerate(layer.encoder.layer):\n",
@@ -9293,6 +9382,15 @@
       ],
       "metadata": {
         "id": "JDsgMI2Z1wYw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Perform a full grid search of all `batch_sizes` and `initial_lrs`."
+      ],
+      "metadata": {
+        "id": "1179SLAKU-8k"
       }
     },
     {
