--- a/Notebooks/t1_finetuning_seqclass_frnfr.ipynb
+++ b/Notebooks/t1_finetuning_seqclass_frnfr.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "https://github.com/limshaocong/SysBERT/blob/main/Sequence_classification_PROMISE.ipynb",
-      "authorship_tag": "ABX9TyOdf7YJ76Gq0WY+pKv/fY9F",
+      "authorship_tag": "ABX9TyMOL7P3hH+4HXu2K0+y+Wh3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5846,7 +5846,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/limshaocong/ReqBERT/blob/main/t1_finetuning_seqclass_frnfr.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/limshaocong/ReqBERT/blob/main/Notebooks/t1_finetuning_seqclass_frnfr.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -5859,6 +5859,21 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The following libraries are required for this notebook. If run locally, it can be commented out.\n",
+        "\n",
+        "\n",
+        "* `transformers` - an excellent library by Hugging Face that provides a high-level abstraction for fine-tuning of transformer-based models, and a model hub of pre-trained models\n",
+        "* `datasets` - a dataset library by Hugging Face. All datasets used for this thesis are uploaded to this dataset hub. \n",
+        "* `torch` - PyTorch. When running the `allenai/scibert_scivocab_cased` pre-trained model with this notebook on GCP Vertex AI, `torch` needs to be installed.\n",
+        "* `seqeval` - a library for evaluation of sequence labelling tasks"
+      ],
+      "metadata": {
+        "id": "Xy20XnwTVYkV"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -5868,6 +5883,15 @@
       "source": [
         "! pip install --user datasets transformers torch"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "While Google Colab provides free GPU access, the specific GPU (K80/ T4/ P100) available is a function of the subscription level (Free Tier/ Colab Pro/ Colab Pro+) and usage trends. Alternatively, Google Cloud Platform provides US$300 in free credits that can be used for paid GPU access."
+      ],
+      "metadata": {
+        "id": "mMCd3T6RVbGl"
+      }
     },
     {
       "cell_type": "code",
@@ -5902,15 +5926,27 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "These dictionaries will minimize the amount of adjustment within the remainder of the script."
+      ],
+      "metadata": {
+        "id": "0wdthuSZVei1"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# This dict allows the correct tokenizer to be imported\n",
+        "# ReqBERT, ReqRoBERTa and ReqSciBERT uses the tokenizers from the\n",
+        "# corresponding base models\n",
         "model_type_dict = {\n",
         "    'bert-base-cased' : 'bert-base-cased',\n",
         "    'roberta-base' : 'roberta-base',\n",
         "    'allenai/scibert_scivocab_cased' : 'allenai/scibert_scivocab_cased',\n",
-        "    'limsc/reqbert-tapt-epoch29' : 'bert-base-cased', # preferred\n",
-        "    'limsc/reqroberta-tapt-epoch43' : 'roberta-base', # preferred\n",
-        "    'limsc/reqscibert-tapt-epoch20' : 'allenai/scibert_scivocab_cased', # preferred\n",
+        "    'limsc/reqbert-tapt-epoch29' : 'bert-base-cased',\n",
+        "    'limsc/reqroberta-tapt-epoch43' : 'roberta-base',\n",
+        "    'limsc/reqscibert-tapt-epoch20' : 'allenai/scibert_scivocab_cased',\n",
         "}\n",
         "\n",
         "model_name_dict = {\n",
@@ -5924,8 +5960,7 @@
         "\n",
         "task_name_dict = {\n",
         "    'limsc/fr-nfr-classification' : 'frnfr',\n",
-        "    'limsc/nfr-subclass-classification' : 'subclass',\n",
-        "    'limsc/concept-recognition-not-iob' : 'cr',\n",
+        "    'limsc/subclass-classification' : 'subclass',\n",
         "    'limsc/requirements-entity-recognition' : 'er'\n",
         "}"
       ],
@@ -5934,6 +5969,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The dataset for the [Task 1 - FR/NFR Classification](https://huggingface.co/datasets/limsc/subclass-classification) is uploaded onto the HuggingFace hub."
+      ],
+      "metadata": {
+        "id": "aFQbDCQxVla2"
+      }
     },
     {
       "cell_type": "code",
@@ -6184,6 +6228,22 @@
       ],
       "metadata": {
         "id": "zn7Ap9euKCSU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Select any of the six LMs and import the corresponding tokenizer.\n",
+        "\n",
+        "* `bert-base-cased`\n",
+        "* `roberta-base`\n",
+        "* `allenai/scibert_scivocab_cased`\n",
+        "* `limsc/reqbert-tapt-epoch29`\n",
+        "* `limsc/reqroberta-tapt-epoch43`\n",
+        "* `limsc/reqscibert-tapt-epoch20`"
+      ],
+      "metadata": {
+        "id": "jBLJD6EKVrnB"
       }
     },
     {
@@ -6441,6 +6501,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Model Fine-tuning (Single Loop)"
+      ],
+      "metadata": {
+        "id": "RrKSsoCDKzxg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Pre-batch datasets in to batches of specified size.\n"
+      ],
+      "metadata": {
+        "id": "AhbvAa4eVx6Z"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from transformers import DataCollatorWithPadding\n",
@@ -6495,10 +6573,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Model Fine-tuning (Single Loop)"
+        "For tf2.6 onwards, the weights of the classification head is only affected by seeds set using tf.random_set_seed. See discussion on [stackoverflow](https://stackoverflow.com/questions/32419510/how-to-get-reproducible-results-in-keras)."
       ],
       "metadata": {
-        "id": "RrKSsoCDKzxg"
+        "id": "8wzdCB0SV2AY"
       }
     },
     {
@@ -6507,12 +6585,9 @@
         "import tensorflow as tf\n",
         "from transformers import TFAutoModelForSequenceClassification, create_optimizer\n",
         "\n",
-        "# For Tensorflow 2.6, the weights of the classification head is only affected\n",
-        "# by seeds set using tf.random_set_seed.\n",
-        "# https://stackoverflow.com/questions/32419510/how-to-get-reproducible-results-in-keras\n",
-        "\n",
         "seed = 67897\n",
         "tf.random.set_seed(seed)\n",
+        "\n",
         "num_epochs = 3\n",
         "initial_lr = 2e-5\n",
         "\n",
@@ -6621,6 +6696,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This chunk of code allows you to control which of the encoder layers have been frozen."
+      ],
+      "metadata": {
+        "id": "RvuVNzelV7WU"
+      }
     },
     {
       "cell_type": "code",
@@ -6797,6 +6881,15 @@
       ],
       "metadata": {
         "id": "JDsgMI2Z1wYw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Perform a full grid search of all `batch_sizes` and `initial_lrs`."
+      ],
+      "metadata": {
+        "id": "eLCL2nArV_k-"
       }
     },
     {
