--- a/Notebooks/t2_finetuning_seqclass_sc.ipynb
+++ b/Notebooks/t2_finetuning_seqclass_sc.ipynb
@@ -9,7 +9,7 @@
       "machine_shape": "hm",
       "toc_visible": true,
       "mount_file_id": "https://github.com/limshaocong/SysBERT/blob/main/Sequence_classification_PROMISE.ipynb",
-      "authorship_tag": "ABX9TyO0oBwqCkz1Sn9bPspQF/9j",
+      "authorship_tag": "ABX9TyN0y8nsxfiESyb22wC26h4P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8603,8 +8603,7 @@
         "\n",
         "* `transformers` - an excellent library by Hugging Face that provides a high-level abstraction for fine-tuning of transformer-based models, and a model hub of pre-trained models\n",
         "* `datasets` - a dataset library by Hugging Face. All datasets used for this thesis are uploaded to this dataset hub. \n",
-        "* `torch` - PyTorch. When running the `allenai/scibert_scivocab_cased` pre-trained model with this notebook on GCP Vertex AI, `torch` needs to be installed.\n",
-        "* `seqeval` - a library for evaluation of sequence labelling tasks"
+        "* `torch` - PyTorch. When running the `allenai/scibert_scivocab_cased` pre-trained model with this notebook on GCP Vertex AI, `torch` needs to be installed."
       ],
       "metadata": {
         "id": "P6GmKTMKRanY"
