--- a/Notebooks/t0_tapt.ipynb
+++ b/Notebooks/t0_tapt.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "mount_file_id": "https://github.com/limshaocong/SysBERT/blob/main/MLM_TAPT.ipynb",
-      "authorship_tag": "ABX9TyMgVW6cI6N2XIiK0m6Snbau",
+      "authorship_tag": "ABX9TyPL/cjTzqTKmhhENeHHNg4H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5503,7 +5503,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/limshaocong/ReqBERT/blob/main/t0_tapt.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/limshaocong/ReqBERT/blob/main/Notebooks/t0_tapt.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -5518,7 +5518,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Install HuggingFace transformers and datasets libaries."
+        "The following libraries are required for this notebook. If run locally, it can be commented out.\n",
+        "\n",
+        "\n",
+        "* `transformers` - an excellent library by Hugging Face that provides a high-level abstraction for fine-tuning of transformer-based models, and a model hub of pre-trained models\n",
+        "* `datasets` - a dataset library by Hugging Face. All datasets used for this thesis are uploaded to this dataset hub. "
       ],
       "metadata": {
         "id": "qwJRXa4g5ZKY"
@@ -5528,116 +5532,23 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "4x90ZwaYo4jD",
-        "outputId": "3b4c6daa-f4bc-42e5-ede4-87a10a26bbab",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "4x90ZwaYo4jD"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting datasets\n",
-            "  Downloading datasets-2.2.2-py3-none-any.whl (346 kB)\n",
-            "\u001b[K     |████████████████████████████████| 346 kB 5.2 MB/s \n",
-            "\u001b[?25hCollecting transformers\n",
-            "  Downloading transformers-4.19.2-py3-none-any.whl (4.2 MB)\n",
-            "\u001b[K     |████████████████████████████████| 4.2 MB 46.8 MB/s \n",
-            "\u001b[?25hCollecting huggingface-hub<1.0.0,>=0.1.0\n",
-            "  Downloading huggingface_hub-0.7.0-py3-none-any.whl (86 kB)\n",
-            "\u001b[K     |████████████████████████████████| 86 kB 4.8 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: requests>=2.19.0 in /usr/local/lib/python3.7/dist-packages (from datasets) (2.23.0)\n",
-            "Requirement already satisfied: pandas in /usr/local/lib/python3.7/dist-packages (from datasets) (1.3.5)\n",
-            "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.7/dist-packages (from datasets) (4.11.4)\n",
-            "Collecting fsspec[http]>=2021.05.0\n",
-            "  Downloading fsspec-2022.5.0-py3-none-any.whl (140 kB)\n",
-            "\u001b[K     |████████████████████████████████| 140 kB 41.4 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: tqdm>=4.62.1 in /usr/local/lib/python3.7/dist-packages (from datasets) (4.64.0)\n",
-            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.7/dist-packages (from datasets) (1.21.6)\n",
-            "Requirement already satisfied: pyarrow>=6.0.0 in /usr/local/lib/python3.7/dist-packages (from datasets) (6.0.1)\n",
-            "Collecting dill<0.3.5\n",
-            "  Downloading dill-0.3.4-py2.py3-none-any.whl (86 kB)\n",
-            "\u001b[K     |████████████████████████████████| 86 kB 6.2 MB/s \n",
-            "\u001b[?25hCollecting xxhash\n",
-            "  Downloading xxhash-3.0.0-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (212 kB)\n",
-            "\u001b[K     |████████████████████████████████| 212 kB 60.8 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: multiprocess in /usr/local/lib/python3.7/dist-packages (from datasets) (0.70.13)\n",
-            "Collecting aiohttp\n",
-            "  Downloading aiohttp-3.8.1-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl (1.1 MB)\n",
-            "\u001b[K     |████████████████████████████████| 1.1 MB 46.8 MB/s \n",
-            "\u001b[?25hCollecting responses<0.19\n",
-            "  Downloading responses-0.18.0-py3-none-any.whl (38 kB)\n",
-            "Requirement already satisfied: packaging in /usr/local/lib/python3.7/dist-packages (from datasets) (21.3)\n",
-            "Collecting pyyaml>=5.1\n",
-            "  Downloading PyYAML-6.0-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl (596 kB)\n",
-            "\u001b[K     |████████████████████████████████| 596 kB 44.0 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: filelock in /usr/local/lib/python3.7/dist-packages (from huggingface-hub<1.0.0,>=0.1.0->datasets) (3.7.0)\n",
-            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.7/dist-packages (from huggingface-hub<1.0.0,>=0.1.0->datasets) (4.2.0)\n",
-            "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from packaging->datasets) (3.0.9)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests>=2.19.0->datasets) (1.24.3)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests>=2.19.0->datasets) (2.10)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests>=2.19.0->datasets) (2022.5.18.1)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests>=2.19.0->datasets) (3.0.4)\n",
-            "Collecting urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1\n",
-            "  Downloading urllib3-1.25.11-py2.py3-none-any.whl (127 kB)\n",
-            "\u001b[K     |████████████████████████████████| 127 kB 50.6 MB/s \n",
-            "\u001b[?25hCollecting tokenizers!=0.11.3,<0.13,>=0.11.1\n",
-            "  Downloading tokenizers-0.12.1-cp37-cp37m-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (6.6 MB)\n",
-            "\u001b[K     |████████████████████████████████| 6.6 MB 37.1 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.7/dist-packages (from transformers) (2019.12.20)\n",
-            "Collecting aiosignal>=1.1.2\n",
-            "  Downloading aiosignal-1.2.0-py3-none-any.whl (8.2 kB)\n",
-            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp->datasets) (21.4.0)\n",
-            "Collecting multidict<7.0,>=4.5\n",
-            "  Downloading multidict-6.0.2-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (94 kB)\n",
-            "\u001b[K     |████████████████████████████████| 94 kB 3.7 MB/s \n",
-            "\u001b[?25hCollecting frozenlist>=1.1.1\n",
-            "  Downloading frozenlist-1.3.0-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (144 kB)\n",
-            "\u001b[K     |████████████████████████████████| 144 kB 49.0 MB/s \n",
-            "\u001b[?25hCollecting asynctest==0.13.0\n",
-            "  Downloading asynctest-0.13.0-py3-none-any.whl (26 kB)\n",
-            "Collecting async-timeout<5.0,>=4.0.0a3\n",
-            "  Downloading async_timeout-4.0.2-py3-none-any.whl (5.8 kB)\n",
-            "Collecting yarl<2.0,>=1.0\n",
-            "  Downloading yarl-1.7.2-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl (271 kB)\n",
-            "\u001b[K     |████████████████████████████████| 271 kB 56.0 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: charset-normalizer<3.0,>=2.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp->datasets) (2.0.12)\n",
-            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata->datasets) (3.8.0)\n",
-            "Collecting multiprocess\n",
-            "  Downloading multiprocess-0.70.12.2-py37-none-any.whl (112 kB)\n",
-            "\u001b[K     |████████████████████████████████| 112 kB 44.0 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.7/dist-packages (from pandas->datasets) (2022.1)\n",
-            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas->datasets) (2.8.2)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.7.3->pandas->datasets) (1.15.0)\n",
-            "Installing collected packages: multidict, frozenlist, yarl, urllib3, asynctest, async-timeout, aiosignal, pyyaml, fsspec, dill, aiohttp, xxhash, tokenizers, responses, multiprocess, huggingface-hub, transformers, datasets\n",
-            "  Attempting uninstall: urllib3\n",
-            "    Found existing installation: urllib3 1.24.3\n",
-            "    Uninstalling urllib3-1.24.3:\n",
-            "      Successfully uninstalled urllib3-1.24.3\n",
-            "  Attempting uninstall: pyyaml\n",
-            "    Found existing installation: PyYAML 3.13\n",
-            "    Uninstalling PyYAML-3.13:\n",
-            "      Successfully uninstalled PyYAML-3.13\n",
-            "  Attempting uninstall: dill\n",
-            "    Found existing installation: dill 0.3.5.1\n",
-            "    Uninstalling dill-0.3.5.1:\n",
-            "      Successfully uninstalled dill-0.3.5.1\n",
-            "  Attempting uninstall: multiprocess\n",
-            "    Found existing installation: multiprocess 0.70.13\n",
-            "    Uninstalling multiprocess-0.70.13:\n",
-            "      Successfully uninstalled multiprocess-0.70.13\n",
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "datascience 0.10.6 requires folium==0.2.1, but you have folium 0.8.3 which is incompatible.\u001b[0m\n",
-            "Successfully installed aiohttp-3.8.1 aiosignal-1.2.0 async-timeout-4.0.2 asynctest-0.13.0 datasets-2.2.2 dill-0.3.4 frozenlist-1.3.0 fsspec-2022.5.0 huggingface-hub-0.7.0 multidict-6.0.2 multiprocess-0.70.12.2 pyyaml-6.0 responses-0.18.0 tokenizers-0.12.1 transformers-4.19.2 urllib3-1.25.11 xxhash-3.0.0 yarl-1.7.2\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "! pip install datasets transformers"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "While Google Colab provides free GPU access, the specific GPU (K80/ T4/ P100) available is a function of the subscription level (Free Tier/ Colab Pro/ Colab Pro+) and usage trends. Alternatively, Google Cloud Platform provides US$300 in free credits that can be used for paid GPU access.\n",
+        "\n",
+        "Running this notebook using T4 or below GPUs will take a very long time."
+      ],
+      "metadata": {
+        "id": "rdpm1ejOXFXZ"
+      }
     },
     {
       "cell_type": "code",
@@ -5669,6 +5580,15 @@
       ],
       "metadata": {
         "id": "bMLtlqa_HB_Q"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The dataset for the [Task-Adaptive Pretraining (TAPT)](https://huggingface.co/datasets/limsc/subclass-classification) is uploaded onto the HuggingFace hub. This is a ~1.1M word text corpus from ~40k requirement statements."
+      ],
+      "metadata": {
+        "id": "4KTt7bBqXS-3"
       }
     },
     {
@@ -5885,13 +5805,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Select any of the three LMs and load the corresponding tokenizer\n",
+        "\n",
+        "* `bert-base-cased`\n",
+        "* `roberta-base`\n",
+        "* `allenai/scibert_scivocab_cased`"
+      ],
+      "metadata": {
+        "id": "LyOjejIHX1gF"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from transformers import AutoTokenizer\n",
         "\n",
-        "# model_checkpoint = 'bert-base-cased'\n",
         "model_checkpoint = 'roberta-base'\n",
-        "# model_checkpoint = 'allenai/scibert_scivocab_cased'\n",
         "\n",
         "# Load pre-trained tokenizer from HuggingFace Hub\n",
         "tokenizer = AutoTokenizer.from_pretrained(\n",
@@ -6102,6 +6033,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "All requirement statements are concatenated into a specified length. See [this notebook](https://colab.research.google.com/github/huggingface/notebooks/blob/main/examples/language_modeling-tf.ipynb) for a detailed elaboration of why this is neccessary."
+      ],
+      "metadata": {
+        "id": "FBsBs5iBZ6gT"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "chunk_size = 128\n",
@@ -6281,6 +6221,7 @@
         "  \n",
         "  if model_checkpoint == 'allenai/scibert_scivocab_cased':\n",
         "    model = TFAutoModelForMaskedLM.from_pretrained(model_checkpoint, from_pt = True)\n",
+        "  \n",
         "  else:\n",
         "    model = TFAutoModelForMaskedLM.from_pretrained(model_checkpoint)\n",
         "  \n",
